--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -1123,120 +1123,59 @@
                 HoverColor: =RGBA(255, 255, 255, 1)
                 HoverFill: =App.Theme.Colors.Darker10
                 OnSelect: |
-                    =UpdateContext({
-                        salesJsonData:
-                        JSON(
-                            {
-                                Sales_Header: {
-                                    Document_Type: Text(sales_header.Document_Type),
-                                    'No.': Text(sales_header.'No.'),
-                                    'Sell-To_Customer_No.': Text(sales_header.'Sell-To_Customer_No.'),
-                                    'Sell-To_Contact_No.': Text(sales_header.'Sell-To_Contact_No.'),
-                                    'Sell-to_Customer_Name': Text(sales_header.'Sell-to_Customer_Name'),
-                                    'Sell-to_Address': Text(sales_header.'Sell-to_Address'),
-                                    'Sell-to_PostCode': Text(sales_header.'Sell-to_PostCode'),
-                                    'Sell-to_City': Text(sales_header.'Sell-to_City'),
-                                    'Sell-to_Contact': Text(sales_header.'Sell-to_Contact'),
-                                    Posting_Date: Text(sales_header.Posting_Date),
-                                    Order_Date: Text(sales_header.Order_Date),
-                                    Document_Date: Text(sales_header.Document_Date),
-                                    VAT_Date: Text(sales_header.VAT_Date),
-                                    Quote_No: Text(sales_header.Quote_No),
-                                    Ext_Doc_No: Text(sales_header.Ext_Doc_No),
-                                    Salesperson_Code: Text(sales_header.Salesperson_Code),
-                                    Status: Text(sales_header.Status),
-                                    'Bill-to_Cust_No': Text(sales_header.'Bill-to_Cust_No'),
-                                    'Bill-to_Contact_No.': Text(sales_header.'Bill-to_Contact_No.'),
-                                    Customer_Price_Group: Text(sales_header.Customer_Price_Group),
-                                    'Bill-to_Name': Text(sales_header.'Bill-to_Name'),
-                                    'Bill-to_Address': Text(sales_header.'Bill-to_Address'),
-                                    'Bill-to_PostCode': Text(sales_header.'Bill-to_PostCode'),
-                                    'Bill-to_City': Text(sales_header.'Bill-to_City'),
-                                    'Bill-to_Contact': Text(sales_header.'Bill-to_Contact'),
-                                    Payment_Terms_Code: Text(sales_header.Payment_Terms_Code),
-                                    Due_Date: Text(sales_header.Due_Date),
-                                    Bank_No: Text(sales_header.Bank_No),
-                                    Bank_Name: Text(sales_header.Bank_Name),
-                                    Shortcut_Dimension_1_Code: Text(sales_header.Shortcut_Dimension_1_Code),
-                                    Payement_Disc: Text(sales_header.Payement_Disc),
-                                    Pmt_Discount_Date: Text(sales_header.Pmt_Discount_Date),
-                                    Payement_Method_Code: Text(sales_header.Payement_Method_Code),
-                                    Amount_Including_VAT: Text(sales_header.Amount_Including_VAT),
-                                    Amount: Text(sales_header.Amount),
-                                    'VAT_Registration_No.': Text(sales_header.'VAT_Registration_No.'),
-                                    'Gen._Bus._Posting_Group': Text(sales_header.'Gen._Bus._Posting_Group'),
-                                    'VAT_Bus._Posting_Group': Text(sales_header.'VAT_Bus._Posting_Group'),
-                                    Transport_Method: Text(sales_header.Transport_Method),
-                                    VAT_Country_Code: Text(sales_header.VAT_Country_Code),
-                                    'Ship-to_Code': Text(sales_header.'Ship-to_Code'),
-                                    'Ship-to_Name': Text(sales_header.'Ship-to_Name'),
-                                    'Ship-to_Address': Text(sales_header.'Ship-to_Address'),
-                                    'Ship-to_Post_Code': Text(sales_header.'Ship-to_Post_Code'),
-                                    'Ship-to_City': Text(sales_header.'Ship-to_City'),
-                                    'Ship-to_Contact': Text(sales_header.'Ship-to_Contact'),
-                                    Location_Code: Text(sales_header.Location_Code),
-                                    Shipp_Method_Code: Text(sales_header.Shipp_Method_Code),
-                                    Shipp_Agent_Code: Text(sales_header.Shipp_Agent_Code),
-                                    Shipp_Agent_Service_Code: Text(sales_header.Shipp_Agent_Service_Code),
-                                    Tax_Area_Code: Text(sales_header.Tax_Area_Code),
-                                    Shipp_Date: DateValue(sales_header.Shipp_Date),
-                                    Sales_Line: ForAll(colSalesLines As sl, 
-                                        {
-                                            Document_Type: Text(sl.Document_Type),
-                                            'Sell-to_Customer_No.': Text(sl.'Sell-to_Customer_No.'),
-                                            Document_No: Text(sl.Document_No),
-                                            Line_No: Text(sl.Line_No),
-                                            Type: Text(sl.Type),
-                                            Item_No: Text(sl.Item_No),
-                                            Location_Code: Text(sl.Location_Code),
-                                            Posting_Group: Text(sl.Posting_Group),
-                                            Description: Text(sl.Description),
-                                            Unit_Of_Measure: Text(sl.Unit_Of_Measure),
-                                            Quantity: Text(sl.Quantity),
-                                            Unit_Price: Text(sl.Unit_Price),
-                                            Line_Amount: Text(sl.Line_Amount),
-                                            Line_Discount_Amount: Text(sl.Line_Discount_Amount),
-                                            'Qty-to_Invoice': Text(sl.'Qty-to_Invoice'),
-                                            'Qty-to_Ship': Text(sl.'Qty-to_Ship'),
-                                            Outstand_Quantity: Text(sl.Outstand_Quantity),                        
-                                            Res_Entry: ForAll(Filter(colSalesResEntries, ThisRecord.Item_No = sl.Item_No),
-                                            {
-                                                Created_By: Text(Created_By),
-                                                Creation_Date: Text(Creation_Date),
-                                                Entry_No: Text(Entry_No),
-                                                Exp_Date: Text(Exp_Date),
-                                                Exp_Receipt_Date: Text(Exp_Receipt_Date),
-                                                Item_No: Text(Item_No),
-                                                Item_Tracking: Text(Item_Tracking),
-                                                LOT_No: Text(LOT_No),
-                                                Location_Code: Text(Location_Code),
-                                                Positive: Text(Positive),
-                                                'Qty-to-Handle_Base': Text('Qty-to-Handle_Base'),
-                                                'Qty-to-Invoice_Base': Text('Qty-to-Invoice_Base'),
-                                                Quantity: Text(Quantity),
-                                                Quantity_Base: Text(Quantity_Base),
-                                                Res_Status: Text(Res_Status),
-                                                Shipment_Date: Text(Shipment_Date),
-                                                Source_ID: Text(Source_ID),
-                                                Source_Ref_No: Text(Source_Ref_No),
-                                                Source_SubType: Text(Source_SubType),
-                                                Source_Type: Text(Source_Type)
-                                            }) 
-                                        }
-                                    )
-                                }
-                            },JSONFormat.IgnoreUnsupportedTypes
+                    =IfError(
+                        GetXml.Run(
+                            SelectedFile,
+                            ReadyForProcessing
+                        ),
+                        IfError(
+                            UpdateXML.Run(
+                                
+                                "{"& Char(34) & "Sales_Header" & Char(34) &": "& JSON(First(salesCollection)) &"}",
+                                SelectedFile,
+                                SelectedFolder
+                            ),
+                            Notify(
+                                "Došlo je do greške!",
+                                NotificationType.Error,
+                                2000
+                            ),
+                            Notify(
+                                "Uspješno ažuriranje!",
+                                NotificationType.Success,
+                                2000
+                            );
+                            If(
+                                nalogZaProdajuReadyForNavCheckbox.Checked,
+                                ChangeXmlStatus.Run(
+                                    SelectedFile,
+                                    SelectedFolder,
+                                    ReadyForNAVProcessing
+                                );
+                                Navigate(
+                                    scr_Entry,
+                                    ScreenTransition.Fade
+                                ),
+                                Navigate(
+                                    scr_XMLNalogZaProdaju,
+                                    ScreenTransition.Fade
+                                )
+                            )
+                        ),
+                        Set(
+                            SelectedFolder,
+                            ReadyForProcessing
+                        );
+                        Notify(
+                            "Postoje izmjene u ovom fajlu.",
+                            NotificationType.Information,
+                            2000
+                        );
+                        Navigate(
+                            scr_XMLNalogZaProdaju,
+                            ScreenTransition.Fade
                         )
-                    });
-                    
-                    UpdateContext({response: UpdateXML.Run(salesJsonData, SelectedFile, SelectedFolder, nalogZaProdajuReadyForNavCheckbox.Checked)});
-                    
-                    UpdateContext({parsedResponseMessage : ParseJSON(response.responsemessage)});
-                    Set(SelectedFolder, response.folder);
-                    
-                    If(response.folder = "ReadyForNAVProcessing", Navigate(scr_Entry,ScreenTransition.Fade), Navigate(scr_XMLNalogZaProdaju,ScreenTransition.Fade));
-                    
-                    Notify(parsedResponseMessage.Message , If(parsedResponseMessage.Status = "200", NotificationType.Success, NotificationType.Error), 2000);
+                    );
                 PressedBorderColor: =App.Theme.Colors.Darker40
                 PressedColor: =Self.Color
                 PressedFill: =App.Theme.Colors.Darker40
