--- a/BSiNS/Src/App.fx.yaml
+++ b/BSiNS/Src/App.fx.yaml
@@ -13,6 +13,7 @@ App As appinfo:
         ReadyForProcessing = "ReadyForProcessing";
         InProgress = "InProgress";
         ReadyForNAVProcessing = "ReadyForNAVProcessing";
+        NAVChanges = "NAVChanges";
     OnStart: =
     StartScreen: =
     Theme: =RedTheme
