--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -1491,17 +1491,14 @@
                             Height: =32
                             LayoutMinHeight: =32
                             LayoutMinWidth: =320
-                            OnChange: |+
-                                =If(IsMatch(Text(inp_rezQty.Value), "^-?\d+(\.\d+)?$") Or Text(inp_rezQty.Value) = "-",
-                                        If(Text(inp_rezQty.Value) <> "-",
-                                                UpdateContext({potrebnaKolicina: (NalogZaProdajuResEntry.Selected.Quantity * -1) - Value(Text(inp_rezQty.Value))})
-                                            ),    
-                                    Notify("Please enter a valid number.", NotificationType.Error);
+                            OnChange: |-
+                                =If(Value(inp_rezQty.Value) > Abs(NalogZaProdajuResEntry.Selected.Quantity_Completed),
                                     Reset(inp_rezQty);
+                                    UpdateContext({potrebnaKolicina: (NalogZaProdajuResEntry.Selected.Quantity * -1) - Value(Text(inp_rezQty.Value))}),
+                                    UpdateContext({potrebnaKolicina: (NalogZaProdajuResEntry.Selected.Quantity * -1) - Value(Text(inp_rezQty.Value))})
                                 )
-                                
                             Placeholder: ="Unesite LOT"
-                            Value: =NalogZaProdajuResEntry.Selected.Quantity_Completed
+                            Value: =Abs(NalogZaProdajuResEntry.Selected.Quantity_Completed)
                             Width: =150
                             X: =40
                             Y: =40
