--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -139,7 +139,6 @@
     "scr_XMLNalogZaProdaju",
     "scr_XMLTemeljniceInventure",
     "scr_XMLPrimke",
-    "scr_XMLOtpremnice",
-    "Screen1"
+    "scr_XMLOtpremnice"
   ]
 }
