--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -1448,7 +1448,7 @@
                             LayoutMinWidth: =320
                             OnChange: =
                             Placeholder: ="Količina"
-                            Value: =NalogZaProdajuResEntry.Selected.Quantity
+                            Value: =Abs(NalogZaProdajuResEntry.Selected.Quantity)
                             Width: =150
                             X: =40
                             Y: =40
@@ -1504,7 +1504,7 @@
                                     )
                                 )
                             Placeholder: ="Unesite LOT"
-                            Value: =Abs(NalogZaProdajuResEntry.Selected.Quantity_Completed)
+                            Value: =NalogZaProdajuResEntry.Selected.Quantity_Completed
                             Width: =150
                             X: =40
                             Y: =40
